--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.4"
+    "@babel/runtime": "^7.15.4",
+    "polished": "^4.1.3"
   }
 }
